# Operon

./: .gitignore  .vercelignore  CLIENT_REQUIREMENTS.md  MIGRATION-PLAN.md  OPERON_CODEX_WEB_ARCHITECTURE.md  PLAN.md  auth.ts  components.json  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: copilot-instructions.md
.playwright-cli/: page-2026-05-11T06-38-03-522Z.yml  page-2026-05-11T06-39-15-226Z.yml
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/login/: page.tsx
app/signup/: page.tsx
components/: brand.tsx  theme-provider.tsx
components/auth/: login-form.tsx  sign-in.tsx  sign-out.tsx  sign-up-form.tsx
components/chat/: Header.tsx  (+3 more)
deploy/: user-data.sh
hooks/: use-auto-resize-textarea.ts  use-mobile.ts
lib/: bot.ts  dashboard-services.ts  db-collections.ts  integrations.ts  memory.ts  nav.ts  operon-api.ts  server-operon-api.ts  skills.ts  types.ts
operonx/: .env.example  Cargo.toml  README.md
operonx/migrations/: 20260504000100_initial_core.sql
operonx/src/: config.rs  db.rs  main.rs  state.rs
operonx/src/agent/: anthropic.rs  events.rs  github.rs  mod.rs  openai.rs  prompt.rs  registry.rs  runner.rs  tools.rs  types.rs
operonx/src/codex/: bridge.rs  json_rpc.rs  mod.rs  types.rs
operonx/src/http/: admin.rs  agent.rs  auth.rs  conversations.rs  integrations.rs  mod.rs  settings.rs  uploads.rs
operonx/workspaces/019e0059-09ed-7d40-9ab1-d21a92a1584f/rusbe/: README.md
server/: .gitignore  Cargo.toml  README.md
types/: qrcode.d.ts
(+193 files in other folders)
