[package]
name = "operonx"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.7", features = ["macros"] }
base64ct = { version = "1.8.3", features = ["alloc"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "request-id", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
